@@ -1,6 +1,6 @@
 {
   "name": "simp-aide",
-  "version": "6.11.0",
+  "version": "6.11.1",
   "author": "SIMP Team",
   "summary": "manages AIDE",
   "license": "Apache-2.0",
